--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "dev:fe": "parcel serve ./client/index.html",
     "dev:be": "nodemon ./be-src/index.ts",
     "build:be": "tsc",
-    "build:fe": "",
+    "build:fe": "parcel build ./client/index.html",
     "build": "npm run build:fe && npm run build:be",
-    "start": "node ./be.dist/index.js"
+    "start": "node ./dist/index.js"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
@@ -23,6 +24,7 @@
     "typescript": "^4.7.4"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.12"
+    "@types/cors": "^2.8.12",
+    "parcel": "^2.7.0"
   }
 }
